# cookiecutter-mixed-python-rust-pdm

./: cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.package_name }}/: .bumpversion.cfg  .gitignore  Cargo.toml  Makefile  pyproject.toml  pytest.ini  setup.cfg  setup.py
{{ cookiecutter.package_name }}/src/python/{{ cookiecutter.package_name }}/: __init__.py  cli.py
{{ cookiecutter.package_name }}/src/rust/: Cargo.toml
{{ cookiecutter.package_name }}/src/rust/src/: lib.rs
